# RAG-Eval

./: .gitignore  Dockerfile  Makefile  README.md  config.template  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
app/: main.py
app/embedding/: langchain_embedding.py
app/eval/: eval_manager.py
app/llm/: langchain_llm.py  llm_api_price.py
app/services/: eval_service.py
app/utils/: config.py
scripts/: argo-workflow.py  argo-workflow.yaml
tests/: qa_example1.py  qa_example2.py  qa_example3_qwen2.py  qa_example4_agentx.py  qa_example5_agentx_correct_ref.py
